metabase/prod/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase
spec:
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: metabase
