metabase/prod/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: metabase
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`metabase.naturalselectionlabs.com`)
      services:
        - name: metabase
          port: 3000
